--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,16 @@ body {
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
 code {
-  font-family: "Courier New",monospace;
+  font-family: "Courier New", monospace;
+}
+
+.asd{
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  border-radius: 10px;
+  border: none;
 }
