--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,38 @@ code {
   float: right;
   text-decoration: none;
 }
+.tags {
+  position: absolute;
+  top: 5%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  margin: 0;
+  padding: 0;
+  color: transparent;
+}
+.tags::before {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  overflow: hidden;
+  border-right: 1px solid black;
+  animation: type 10s steps(14) infinite;
+  white-space: nowrap;
+}
+@keyframes type {
+  0% {
+    width: 0%;
+  }
+  50% {
+    width: 100%;
+  }
+  100% {
+    width: 0%;
+  }
+}
